--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p>Let's go to the mall!</p>
     </header>
     <main>
-      <form action="">
+      <form action="#">
         <!--<div>
           <input type="checkbox" id="check1" />
           <label for="check1">
