--- a/index.html
+++ b/index.html
@@ -2,59 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>CSS Diner Shopping List</title>
   </head>
   <body>
-    <header>
-      <h1>CSS Diner Shopping List</h1>
-      <p>Let's go to the mall!</p>
-    </header>
-    <main>
-      <form action="#">
-        <!--<div>
-          <input type="checkbox" id="check1" />
-          <label for="check1">
-            <span>A lot of pickles</span> (for the next lessons about CSS)
-          </label>
-        </div>-->
-        <div>
-          <label>
-            <input type="checkbox" /><span>A lot of pickles</span> (for the next
-            lessons about CSS)
-          </label>
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" /><span>10 apples</span> (for more CSS
-            manipulations)
-          </label>
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" /><span>20 oranges</span> (because they are
-            awesome)
-          </label>
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" /><span>13 plates</span> (hm... they always
-            disappear)
-          </label>
-        </div>
-        <div>
-          <label> <input type="checkbox" /><span>15 bentos</span> </label>
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" />
-            <span>1 bottle of Sake &Hat;&UnderBar;&Hat; </span>
-            (for my friends)
-          </label>
-        </div>
-      </form>
-    </main>
-    <footer>
-      <p>Bon appetit! :)</p>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>CSS Diner Shopping List</h1>
+        <p>Let's go to the mall!</p>
+      </header>
+      <main>
+        <form action="#">
+          <div>
+            <input type="checkbox" id="check1" />
+            <label for="check1">
+              A lot of pickles <span>for the next lessons about CSS</span>
+            </label>
+          </div>
+          <div>
+            <input type="checkbox" id="check2" />
+            <label for="check2">
+              10 apples <span>for more CSS manipulations</span>
+            </label>
+          </div>
+          <div>
+            <input type="checkbox" id="check3" />
+            <label for="check3">
+              20 oranges <span>because they are awesome</span>
+            </label>
+          </div>
+          <div>
+            <input type="checkbox" id="check4" />
+            <label for="check4">
+              13 plates <span>hm... they always disappear</span>
+            </label>
+          </div>
+          <div>
+            <input type="checkbox" id="check5" />
+            <label for="check5"> 15 bentos </label>
+          </div>
+          <div>
+            <input type="checkbox" id="check6" />
+            <label for="check6">
+              1 bottle of Sake ^_^ <span>for my friends</span>
+            </label>
+          </div>
+        </form>
+      </main>
+      <footer>
+        <p>Bon appetit! :)</p>
+      </footer>
+    </div>
   </body>
 </html>
